# neural-canvas

./: .gitignore  LICENSE  README.md  balls.gltf  explore_transfer_functions.sh  generate_3d_dataset.sh  generate_dataset.sh  pyproject.toml  test_export.html
debug/: gen_image_20746518_0.tif  gen_image_20746518_1.tif  gen_image_94529781_0.tif  gen_image_94529781_1.tif
examples/: analyze_dataset.py  edit_2d_conf.yaml  edit_3d_conf.yaml  fit_2d_conf.yaml  generate_2d_conf.yaml  generate_3d_conf.yaml  generate_animation.py  generate_animation_conf.yaml  generate_image.py  generate_volume.py  image_edit.py  image_fit.py  image_generate.py  render_volumes.py  run_cppn_3d.py  run_cppn_3d_dev.py  run_cppn_clip.py  run_cppn_match.py  volume_edit.py
inart/networks/: inr_maps_2d.py  inr_maps_3d.py  inrf.py  torchgraph.py
inart/tools/: reproduce_tools_3d.py
inart/utils/: primitives.py
lightning/: control_conf.yaml  lemniscate_test.py  lightning_generators.py  lightning_generators_2d.py  lightning_generators_3d.py  lightning_model_base.py  lightning_models.py  lightning_runner.py  lightning_runner_3d.py  rspline.py  slerp.py  start_control.py  start_create.py  start_create_3d.py  test.html
losses/: clip_utils.py
networks/: ops.py  weight_inits.py
neural_canvas/: __init__.py
neural_canvas/losses/: __init__.py  losses.py  lpips_loss.py
neural_canvas/models/: __init__.py  inr_maps_2d.py  inr_maps_3d.py  inrf.py  inrf_base.py  networks.py  ops.py  torchgraph.py  weight_inits.py
tests/: readme_test.py  test_pv.py
utils/: positional_encodings.py  utils.py
(+8 files in other folders)
